--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -6,15 +6,16 @@ author_profile: true
 ---
 
 {% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my publications on my <a href="{{site.author.googlescholar}}">Google Scholar</a>.</div>
+  <div class="wordwrap" style="margin-bottom: 30px;">You can also find my publications on my <a href="{{site.author.googlescholar}}">Google Scholar</a>.</div>
 {% endif %}
 
 {% include base_path %}
 
-<div style="margin-bottom: 20px;">
-  <label style="margin-right: 15px;">Sort by:</label>
-  <button id="sort-by-time" onclick="sortPublications('time')" style="padding: 5px 15px; margin-right: 10px; cursor: pointer; background-color: #0066cc; color: white; border: none; border-radius: 3px;">Time</button>
-  <button id="sort-by-category" onclick="sortPublications('category')" style="padding: 5px 15px; cursor: pointer; background-color: #ccc; color: black; border: none; border-radius: 3px;">Category</button>
+<h2 style="margin-top: 40px; margin-bottom: 15px;">Full List</h2>
+<div style="margin-bottom: 25px; padding-bottom: 15px; border-bottom: 1px solid #ddd;">
+  <span style="margin-right: 15px; color: #666;">Sort by:</span>
+  <button id="sort-by-time" onclick="sortPublications('time')" style="padding: 6px 18px; margin-right: 10px; cursor: pointer; background-color: #0066cc; color: white; border: none; border-radius: 4px; font-size: 14px;">Time</button>
+  <button id="sort-by-category" onclick="sortPublications('category')" style="padding: 6px 18px; cursor: pointer; background-color: #e0e0e0; color: #333; border: none; border-radius: 4px; font-size: 14px;">Category</button>
 </div>
 
 <div id="publications-container">
